[gd_scene load_steps=10 format=2]

[ext_resource path="res://scenes/pause_menu.gd" type="Script" id=1]
[ext_resource path="res://resources/main_theme.tres" type="Theme" id=2]
[ext_resource path="res://resources/fonts/NexaBold/Nexa Bold.otf" type="DynamicFontData" id=3]
[ext_resource path="res://resources/fonts/NexaBold/Nexa Light.otf" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 24
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 20
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=4]
size = 32
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=5]
size = 24
font_data = ExtResource( 4 )

[node name="PauseMenu" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 1 )

[node name="BaseBg" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.498039 )

[node name="Above" type="ColorRect" parent="."]
anchor_right = 1.0
margin_bottom = 24.0
color = Color( 0, 1, 1, 1 )

[node name="Label" type="Label" parent="Above"]
anchor_bottom = 1.0
margin_left = 6.0
margin_top = 2.0
margin_right = 67.0
custom_fonts/font = SubResource( 1 )
text = "paused"
align = 1
valign = 1
uppercase = true

[node name="SideVBox" type="ColorRect" parent="."]
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 32.0
margin_right = 252.0
margin_bottom = -8.0
color = Color( 0, 0, 0, 0.745098 )

[node name="VBox" type="VBoxContainer" parent="SideVBox"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = -8.0

[node name="ResumeBtn" type="ToolButton" parent="SideVBox/VBox"]
unique_name_in_owner = true
margin_right = 228.0
margin_bottom = 24.0
focus_neighbour_left = NodePath(".")
focus_neighbour_top = NodePath(".")
focus_neighbour_right = NodePath("../../../SideOther/Settings/Sound/SoundSlider")
focus_neighbour_bottom = NodePath("../RestartBtn")
focus_next = NodePath("../RestartBtn")
focus_previous = NodePath(".")
text = "Resume"
align = 0

[node name="RestartBtn" type="ToolButton" parent="SideVBox/VBox"]
unique_name_in_owner = true
margin_top = 28.0
margin_right = 228.0
margin_bottom = 52.0
focus_neighbour_left = NodePath(".")
focus_neighbour_top = NodePath("../ResumeBtn")
focus_neighbour_right = NodePath("../../../SideOther/Settings/Sound/SoundSlider")
focus_neighbour_bottom = NodePath("../ToMenuBtn")
focus_next = NodePath("../ResumeBtn")
focus_previous = NodePath("../ToMenuBtn")
text = "Restart"
align = 0

[node name="ToMenuBtn" type="ToolButton" parent="SideVBox/VBox"]
unique_name_in_owner = true
margin_top = 56.0
margin_right = 228.0
margin_bottom = 80.0
focus_neighbour_left = NodePath(".")
focus_neighbour_top = NodePath("../RestartBtn")
focus_neighbour_right = NodePath("../../../SideOther/Settings/Sound/SoundSlider")
focus_neighbour_bottom = NodePath(".")
focus_next = NodePath(".")
focus_previous = NodePath("../RestartBtn")
text = "Back to menu"
align = 0

[node name="SideOther" type="ColorRect" parent="."]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -760.0
margin_top = 32.0
margin_right = -8.0
margin_bottom = -8.0
color = Color( 0, 0, 0, 0.745098 )

[node name="Settings" type="VBoxContainer" parent="SideOther"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = -8.0

[node name="Label3" type="Label" parent="SideOther/Settings"]
margin_right = 736.0
margin_bottom = 24.0
custom_fonts/font = SubResource( 3 )
text = "settings"
align = 1
uppercase = true

[node name="Label" type="Label" parent="SideOther/Settings"]
margin_top = 28.0
margin_right = 736.0
margin_bottom = 48.0
custom_colors/font_color = Color( 0, 1, 1, 1 )
custom_fonts/font = SubResource( 2 )
text = "audio"
uppercase = true

[node name="Sound" type="Control" parent="SideOther/Settings"]
margin_top = 52.0
margin_right = 736.0
margin_bottom = 68.0
rect_min_size = Vector2( 0, 16 )

[node name="Label" type="Label" parent="SideOther/Settings/Sound"]
margin_right = 183.0
margin_bottom = 16.0
size_flags_horizontal = 3
text = "Sound"
align = 1

[node name="SoundSlider" type="HSlider" parent="SideOther/Settings/Sound"]
unique_name_in_owner = true
margin_left = 187.0
margin_right = 683.0
margin_bottom = 16.0
focus_neighbour_left = NodePath("../../../../SideVBox/VBox/ResumeBtn")
focus_neighbour_top = NodePath(".")
focus_neighbour_right = NodePath(".")
focus_neighbour_bottom = NodePath("../../Music/MusicSlider")
focus_next = NodePath("../../Music/MusicSlider")
focus_previous = NodePath(".")
size_flags_horizontal = 3
size_flags_stretch_ratio = 3.0
max_value = 30.0
value = 30.0

[node name="Music" type="Control" parent="SideOther/Settings"]
margin_top = 72.0
margin_right = 736.0
margin_bottom = 88.0
rect_min_size = Vector2( 0, 16 )

[node name="Label" type="Label" parent="SideOther/Settings/Music"]
margin_right = 183.0
margin_bottom = 16.0
size_flags_horizontal = 3
text = "Music"
align = 1

[node name="MusicSlider" type="HSlider" parent="SideOther/Settings/Music"]
unique_name_in_owner = true
margin_left = 187.0
margin_right = 683.0
margin_bottom = 16.0
focus_neighbour_left = NodePath("../../../../SideVBox/VBox/ResumeBtn")
focus_neighbour_top = NodePath("../../Sound/SoundSlider")
focus_neighbour_right = NodePath(".")
focus_neighbour_bottom = NodePath("../../PhotoSensBtn")
focus_next = NodePath("../../PhotoSensBtn")
focus_previous = NodePath("../../Sound/SoundSlider")
size_flags_horizontal = 3
size_flags_stretch_ratio = 3.0
max_value = 30.0
value = 30.0

[node name="HSeparator" type="HSeparator" parent="SideOther/Settings"]
margin_top = 92.0
margin_right = 736.0
margin_bottom = 96.0

[node name="Label2" type="Label" parent="SideOther/Settings"]
margin_top = 100.0
margin_right = 736.0
margin_bottom = 120.0
custom_colors/font_color = Color( 0, 1, 1, 1 )
custom_fonts/font = SubResource( 2 )
text = "visual"
uppercase = true

[node name="PhotoSensBtn" type="CheckBox" parent="SideOther/Settings"]
unique_name_in_owner = true
margin_top = 124.0
margin_right = 736.0
margin_bottom = 148.0
focus_neighbour_left = NodePath("../../../SideVBox/VBox/ResumeBtn")
focus_neighbour_top = NodePath("../Music/MusicSlider")
focus_neighbour_right = NodePath(".")
focus_neighbour_bottom = NodePath("../ScreenShakeBtn")
focus_next = NodePath("../ScreenShakeBtn")
focus_previous = NodePath("../Music/MusicSlider")
text = "Photosensivity mode"

[node name="ScreenShakeBtn" type="CheckBox" parent="SideOther/Settings"]
unique_name_in_owner = true
margin_top = 152.0
margin_right = 736.0
margin_bottom = 176.0
focus_neighbour_left = NodePath("../../../SideVBox/VBox/ResumeBtn")
focus_neighbour_top = NodePath("../PhotoSensBtn")
focus_neighbour_right = NodePath(".")
focus_neighbour_bottom = NodePath("../FullScreenBtn")
focus_next = NodePath("../FullScreenBtn")
focus_previous = NodePath("../PhotoSensBtn")
text = "Screen shake"

[node name="FullScreenBtn" type="CheckBox" parent="SideOther/Settings"]
unique_name_in_owner = true
margin_top = 180.0
margin_right = 736.0
margin_bottom = 204.0
focus_neighbour_left = NodePath("../../../SideVBox/VBox/ResumeBtn")
focus_neighbour_top = NodePath("../ScreenShakeBtn")
focus_neighbour_right = NodePath(".")
focus_neighbour_bottom = NodePath("../HBoxContainer/InputControlBtn")
focus_next = NodePath("../HBoxContainer/InputControlBtn")
focus_previous = NodePath("../ScreenShakeBtn")
text = "Fullscreen"

[node name="HSeparator2" type="HSeparator" parent="SideOther/Settings"]
margin_top = 208.0
margin_right = 736.0
margin_bottom = 212.0

[node name="Label4" type="Label" parent="SideOther/Settings"]
margin_top = 216.0
margin_right = 736.0
margin_bottom = 236.0
custom_colors/font_color = Color( 0, 1, 1, 1 )
custom_fonts/font = SubResource( 2 )
text = "controls"
uppercase = true

[node name="HBoxContainer" type="HBoxContainer" parent="SideOther/Settings"]
margin_top = 240.0
margin_right = 736.0
margin_bottom = 264.0

[node name="InputControlLabel" type="Label" parent="SideOther/Settings/HBoxContainer"]
unique_name_in_owner = true
margin_top = 4.0
margin_right = 101.0
margin_bottom = 20.0
text = "Control mode"

[node name="InputControlBtn" type="OptionButton" parent="SideOther/Settings/HBoxContainer"]
unique_name_in_owner = true
margin_left = 105.0
margin_right = 214.0
margin_bottom = 24.0
focus_neighbour_left = NodePath("../../../../SideVBox/VBox/ResumeBtn")
focus_neighbour_top = NodePath("../../ScreenShakeBtn")
focus_neighbour_right = NodePath(".")
focus_neighbour_bottom = NodePath(".")
focus_next = NodePath(".")
focus_previous = NodePath("../../ScreenShakeBtn")
text = "Singleplayer"
items = [ "Singleplayer", null, false, 0, null, "Two players, one keyboard, one controller", null, false, 1, null, "Two players, both keyboard/controller", null, false, 2, null ]
selected = 0

[node name="Controls1" type="Label" parent="SideOther/Settings"]
unique_name_in_owner = true
margin_top = 268.0
margin_right = 736.0
margin_bottom = 303.0
custom_colors/font_color = Color( 0, 1, 1, 1 )
text = "WASD/Left Stick/D-Pad: Move
Space/A/B (Button 0/1): Dash"

[node name="Controls2" type="HBoxContainer" parent="SideOther/Settings"]
unique_name_in_owner = true
visible = false
margin_top = 279.0
margin_right = 736.0
margin_bottom = 333.0

[node name="Label" type="Label" parent="SideOther/Settings/Controls2"]
margin_right = 112.0
margin_bottom = 54.0
custom_colors/font_color = Color( 0, 1, 1, 1 )
text = "Player 1:
    WASD: Move
    Space: Dash"

[node name="Label2" type="Label" parent="SideOther/Settings/Controls2"]
margin_left = 116.0
margin_right = 304.0
margin_bottom = 54.0
custom_colors/font_color = Color( 1, 1, 0, 1 )
text = "Player 2:
    Left Stick/D-Pad: Move
    A/B (Button 0/1): Dash"

[node name="Controls3" type="HBoxContainer" parent="SideOther/Settings"]
unique_name_in_owner = true
visible = false
margin_top = 279.0
margin_right = 736.0
margin_bottom = 333.0

[node name="Label" type="Label" parent="SideOther/Settings/Controls3"]
margin_right = 147.0
margin_bottom = 54.0
custom_colors/font_color = Color( 0, 1, 1, 1 )
text = "Player 1 (Keyboard):
    WASD: Move
    Space: Dash"

[node name="Label2" type="Label" parent="SideOther/Settings/Controls3"]
margin_left = 151.0
margin_right = 324.0
margin_bottom = 54.0
custom_colors/font_color = Color( 1, 1, 0, 1 )
text = "Player 2 (Keyboard):
    Arrow keys: Move
    Enter/Kp Enter: Dash"

[node name="Label3" type="Label" parent="SideOther/Settings/Controls3"]
margin_left = 328.0
margin_right = 516.0
margin_bottom = 54.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Player 1/2 (Controller):
    Left Stick/D-Pad: Move
    A/B (Button 0/1): Dash"

[node name="RestartPopup" type="Popup" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -125.0
margin_bottom = 125.0

[node name="Bg" type="ColorRect" parent="RestartPopup"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -300.0
margin_bottom = 300.0
color = Color( 0, 0, 0, 0.498039 )

[node name="Base" type="ColorRect" parent="RestartPopup"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="Label" type="Label" parent="RestartPopup/Base"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -126.0
margin_top = 16.0
margin_right = 126.0
margin_bottom = 32.0
custom_colors/font_color = Color( 0, 1, 1, 1 )
custom_fonts/font = SubResource( 4 )
text = "are you sure?"
uppercase = true

[node name="Label2" type="Label" parent="RestartPopup/Base"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -25.5
margin_bottom = 25.5
custom_fonts/font = SubResource( 5 )
text = "Are you sure you want to restart the track?
You will lose all the current progress!"
align = 1

[node name="RestartConfirm" type="ToolButton" parent="RestartPopup/Base"]
anchor_left = 0.4
anchor_top = 1.0
anchor_right = 0.4
anchor_bottom = 1.0
margin_left = -64.0
margin_top = -48.0
margin_right = 64.0
margin_bottom = -16.0
custom_colors/font_color_disabled = Color( 0, 1, 1, 1 )
custom_colors/font_color_focus = Color( 0, 1, 1, 1 )
custom_colors/font_color = Color( 0, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 0, 1, 1, 1 )
text = "Restart"

[node name="RestartCancel" type="ToolButton" parent="RestartPopup/Base"]
anchor_left = 0.6
anchor_top = 1.0
anchor_right = 0.6
anchor_bottom = 1.0
margin_left = -64.0
margin_top = -48.0
margin_right = 64.0
margin_bottom = -16.0
custom_colors/font_color_disabled = Color( 0, 1, 1, 1 )
custom_colors/font_color_focus = Color( 0, 1, 1, 1 )
custom_colors/font_color = Color( 0, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 0, 1, 1, 1 )
text = "Cancel"

[node name="ToMenuPopup" type="Popup" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -125.0
margin_bottom = 125.0

[node name="Bg" type="ColorRect" parent="ToMenuPopup"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -300.0
margin_bottom = 300.0
color = Color( 0, 0, 0, 0.498039 )

[node name="Base" type="ColorRect" parent="ToMenuPopup"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="Label" type="Label" parent="ToMenuPopup/Base"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -126.0
margin_top = 16.0
margin_right = 126.0
margin_bottom = 32.0
custom_colors/font_color = Color( 0, 1, 1, 1 )
custom_fonts/font = SubResource( 4 )
text = "are you sure?"
uppercase = true

[node name="Label2" type="Label" parent="ToMenuPopup/Base"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -25.5
margin_bottom = 25.5
custom_fonts/font = SubResource( 5 )
text = "Are you sure you want to return to the menu?
You will lose all the current progress!"
align = 1

[node name="ToMenuConfirm" type="ToolButton" parent="ToMenuPopup/Base"]
anchor_left = 0.4
anchor_top = 1.0
anchor_right = 0.4
anchor_bottom = 1.0
margin_left = -64.0
margin_top = -48.0
margin_right = 64.0
margin_bottom = -16.0
custom_colors/font_color_disabled = Color( 0, 1, 1, 1 )
custom_colors/font_color_focus = Color( 0, 1, 1, 1 )
custom_colors/font_color = Color( 0, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 0, 1, 1, 1 )
text = "Back to menu"

[node name="ToMenuCancel" type="ToolButton" parent="ToMenuPopup/Base"]
anchor_left = 0.6
anchor_top = 1.0
anchor_right = 0.6
anchor_bottom = 1.0
margin_left = -64.0
margin_top = -48.0
margin_right = 64.0
margin_bottom = -16.0
custom_colors/font_color_disabled = Color( 0, 1, 1, 1 )
custom_colors/font_color_focus = Color( 0, 1, 1, 1 )
custom_colors/font_color = Color( 0, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 0, 1, 1, 1 )
text = "Cancel"

[connection signal="pressed" from="SideVBox/VBox/ResumeBtn" to="." method="_on_Resume_pressed"]
[connection signal="pressed" from="SideVBox/VBox/RestartBtn" to="." method="_on_Restart_pressed"]
[connection signal="pressed" from="SideVBox/VBox/ToMenuBtn" to="." method="_on_ToMenu_pressed"]
[connection signal="value_changed" from="SideOther/Settings/Sound/SoundSlider" to="." method="_on_SoundSlider_value_changed"]
[connection signal="value_changed" from="SideOther/Settings/Music/MusicSlider" to="." method="_on_MusicSlider_value_changed"]
[connection signal="toggled" from="SideOther/Settings/PhotoSensBtn" to="." method="_on_PhotoSensBtn_toggled"]
[connection signal="toggled" from="SideOther/Settings/ScreenShakeBtn" to="." method="_on_ScreenShakeBtn_toggled"]
[connection signal="toggled" from="SideOther/Settings/FullScreenBtn" to="." method="_on_FullScreenBtn_toggled"]
[connection signal="item_selected" from="SideOther/Settings/HBoxContainer/InputControlBtn" to="." method="_on_InputControlBtn_item_selected"]
[connection signal="pressed" from="RestartPopup/Base/RestartConfirm" to="." method="_on_RestartConfirm_pressed"]
[connection signal="pressed" from="RestartPopup/Base/RestartCancel" to="." method="_on_RestartCancel_pressed"]
[connection signal="pressed" from="ToMenuPopup/Base/ToMenuConfirm" to="." method="_on_ToMenuConfirm_pressed"]
[connection signal="pressed" from="ToMenuPopup/Base/ToMenuCancel" to="." method="_on_ToMenuCancel_pressed"]
